# data-transform-agent

./: .env.example  .gitignore  AI_AGENT_GUIDE.md  DEMO_GUIDE.md  GETTING_STARTED.md  INSTALL.md  README.md  TESTING.md  TEST_RESULTS.md  USAGE.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_ai_agent.py
.github/instructions/: coding-standards.md  development-workflow.md
.github/prompts/: 01-core-identity.md  02-project-context.md  agent-instructions.md  quick-start.md
.github/skills/: data-transformation.md  iso20022-reference.md
data_transform_agent/: __init__.py  ai_agent.py  avro_converter.py  cli.py  json_converter.py  transformer.py  utils.py  xsd_parser.py
docs/: ACCURACY_VERIFICATION.md  AVRO_SUPPORT.md  MAC_USAGE_GUIDE.md  csv-testing-guide.md
examples/: basic_usage.py  book.xsd  book_schema.avsc  book_schema.json  compare_versions.py  pain001_fields_sample.csv  person.xsd  person_schema.avsc  person_schema.json  validate_message.py
schemas/: pain.001.001.12.avsc  pain.001.avsc  test_user.avsc
scripts/: convert_xsd_to_avro.py
src/iso20022_agent/: __init__.py  ai_agent.py  avro_parser.py  cli.py  exporters.py  field.py  parser.py  schema_agent.py  semantic_matcher.py  validator.py
templates/: compare.html  index.html
tests/: test_agent.py  test_ai_agent.py  test_avro_converter.py  test_avro_support.py  test_field.py  test_json_converter.py  test_transformer.py  test_utils.py  test_xsd_parser.py
